--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
       <div class="logo">
         <a href="https://schwenz.uk" target="_blank" rel="noopener noreferrer"></a>
       </div>        
-        <h1>SCHWENZ PHOTOS</h1>
-        <div class= "mobile-hidden" id="instagram-nav"><a href="https://www.instagram.com/schwenzerrr" target="_blank" rel="noopener noreferrer"></a></div>
+        <h1>DIGITAL DESIGN</h1>
+        <div class= "mobile-hidden" id="instagram-nav"><a href="https://www.instagram.com/schwenzart" target="_blank" rel="noopener noreferrer"></a></div>
         <div class="nav-links mobile-hidden">
+
 <!--             <a onclick="scrollToSection('about')">ABOUT ME</a>
 
             <div class="dropdown">          
@@ -53,13 +54,14 @@
             </div>
             <div><a onclick="scrollToSection('contact')">Contact</a></div>              
             <div class="icon-link" id="artstation"><a href="https://www.artstation.com/billy_schwenzer" target="_blank" rel="noopener noreferrer">ARTSTATION</a></div> -->
-            <div class= "icon-link" id="instagram"><a href="https://www.instagram.com/schwenzerrr" target="_blank" rel="noopener noreferrer">INSTAGRAM</a></div>
+            <div class= "icon-link" id="instagram"><a href="https://www.instagram.com/schwenzart" target="_blank" rel="noopener noreferrer">INSTAGRAM</a></div>
             
           </aside>
     </div>
   </nav>    
-  <!-- Modal -->
-  <div id="album-modal" class="modal hidden">
+
+  <!-- Modal : Popup for viewing album cards -->
+  <!-- <div id="album-modal" class="modal hidden">
     <div class="modal-content">
       <span class="close">&times;</span>
       <h2 id="modal-title"></h2>
@@ -74,7 +76,9 @@
 
 
     
-  </div>
+  </div> -->
+  
   <script src="albums.js"></script>
+
 </body>
 </html>
