--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </nav>    
 
   <!-- Modal : Popup for viewing album cards -->
-  <!-- <div id="album-modal" class="modal hidden">
+  <div id="album-modal" class="modal hidden">
     <div class="modal-content">
       <span class="close">&times;</span>
       <h2 id="modal-title"></h2>
@@ -76,7 +76,7 @@
 
 
     
-  </div> -->
+  </div>
   
   <script src="albums.js"></script>
 
