update order and titles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Schwenz Digital Design</title>
-  <link rel="shortcut icon" href="Assets/Images/SchwenzerLogo1.png">
+  <link rel="shortcut icon" href="Assets/Images/Branding/SchwenzerLogo1.png">
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +17,7 @@
       <div class="logo">
         <a href="https://schwenz.uk" target="_blank" rel="noopener noreferrer"></a>
       </div>        
-        <h1>DIGITAL DESIGN</h1>
+        <h1>SCHWENZ DIGITAL DESIGN</h1>
         <div class= "mobile-hidden" id="instagram-nav"><a href="https://www.instagram.com/schwenzart" target="_blank" rel="noopener noreferrer"></a></div>
         <div class="nav-links mobile-hidden">
 
