Update and add email contact

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
             <div class= "icon-link" id="instagram"><a href="https://www.instagram.com/schwenzart" target="_blank" rel="noopener noreferrer">INSTAGRAM</a></div>
             
           </aside>
+          <div class="email-icon" ><a href="mailto:schwenzart@gmail.com?subject=Website Work Enquiry" target="_blank" rel="noopener noreferrer"></a></div>
     </div>
   </nav>    
 
