--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
             <div><a onclick="scrollToSection('contact')">Contact</a></div>              
             <div class="icon-link" id="artstation"><a href="https://www.artstation.com/billy_schwenzer" target="_blank" rel="noopener noreferrer">ARTSTATION</a></div> -->
             <div class= "icon-link" id="instagram"><a href="https://www.instagram.com/schwenzart" target="_blank" rel="noopener noreferrer">INSTAGRAM</a></div>
+            <div class= "icon-link" id="email"><a href="mailto:schwenzart@gmail.com?subject=Digital Design Enquiry" target="_blank" rel="noopener noreferrer">CONTACT ME</a></div>
             
           </aside>
-          <div class="email-icon" ><a href="mailto:schwenzart@gmail.com?subject=Website Work Enquiry" target="_blank" rel="noopener noreferrer"></a></div>
+          <div class="mobile-hidden email-icon" ><a href="mailto:schwenzart@gmail.com?subject=Digital Design Enquiry" target="_blank" rel="noopener noreferrer"></a></div>
     </div>
   </nav>    
 
