--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     </div>
   </nav>    
 
-  <!-- Modal : Popup for viewing album cards -->
+  <!-- Modal : Popup for viewing album cards
   <div id="album-modal" class="modal hidden">
     <div class="modal-content">
       <span class="close">&times;</span>
@@ -71,7 +71,9 @@
       <div id="modal-links"></div>
       
     </div>
-  </div>
+  </div> -->
+
+  <!-- Album list html -->
   <div class="wrapper">
     <div id="album-list"></div>
     
