--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Schwenz Digital Design</title>
   <link rel="shortcut icon" href="Assets/Images/Branding/SchwenzerLogo1.png">
   <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet'>
